...
                        ProgressView()
                            .padding(.vertical, 16)
                    }
                }
            }
        }
        .accessibilityIdentifier("charactersScrollView")
        .refreshable {
            viewModel.refreshData()
        }
        .navigationTitle("Characters")
        .task {
            viewModel.loadInitialData()
        }
    }
}

...
