...
                                    .font(.system(size: 30))
                                    .foregroundStyle(Color.primary, .background)
                                    .shadow(radius: 2)
                                    .frame(height: 35)
                            }
                        )
                        .accessibilityIdentifier("characterDetailsBackButton")
                        .accessibilityLabel("Back")
                        .padding(.leading, 16)
                        .padding(.top, 16)
                        .padding(
                            .top,
                            UIApplication
                                .shared
...
