...
        
        navigationItem.title = "Rick and Morty UIKit"
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationController?.navigationBar.barTintColor = .systemBackground
        navigationItem.largeTitleDisplayMode = .always

        tableView.accessibilityIdentifier = "charactersTableView"
        
        startObservingViewModel()
        
        tableView.prefetchDataSource = self
        tableView
            .register(
...
